--- a/aboutus.html
+++ b/aboutus.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CaiBird</title>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery-1.9.1.js"> </script>
-     <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery-ui.min.js"></script>
-    <link href="../s/site/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../s/site/css/jquery-ui.min.css">
-    <link rel="stylesheet" type="text/css" href="../s/site/css/indexcss.css">
-    <script src="../s/site/js/bootstrap.min.js"></script>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/indexjs.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js"> </script>
+     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="css/indexcss.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
     <style type="text/css">
        .aboutrighttitle{
             padding-bottom: 2%;
@@ -23,7 +23,7 @@
 
 <div class="header">
   <div class="row titlehead">
-    <img src="../s/site/img/logo.png" class="imglogo">
+    <img src="img/logo.png" class="imglogo">
   </div>
 
   <nav class="navbar navhome">
@@ -31,12 +31,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <!-- <div class="collapse navbar-collapse"> -->
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">首页</a></li>
+        <li><a href="index.html">首页</a></li>
         <li><a href="design.html">设计</a></li>
-        <li><a href="photography.html">摄像</a></li>
+        <li><a href="photo.html">摄像</a></li>
         <li><a href="it.html">IT</a></li>
+        <li><a href="caibird.html">菜鸟课堂</a></li>
         <li><a href="#">项目申请</a></li>
-        <li><a href="aboutus.html">关于我们</a></li>
+        <li><a href="oldbird.html">老鸟客厅</a></li>
+        <li class="active"><a href="aboutus.html">加入我们</a></li>
     <!-- </div> --><!-- /.navbar-collapse -->
   <!-- </div> --><!-- /.container-fluid -->
   </nav>
@@ -49,25 +51,25 @@
             <div class="row lefttexttitle">老鸟客厅</div>
             <hr />
             <div class="row aboutleftup">
-                <img class="img-responsive leftimg"src="../s/site/img/Dbird.png">
+                <img class="img-responsive leftimg"src="img/Dbird.png">
                 <h2 class="leftbirdtext">设计老鸟</h2>
             </div>
             <hr/>
             <div class="row aboutleftup">
-                <img class="img-responsive leftimg"src="../s/site/img/Pbird.png">
+                <img class="img-responsive leftimg"src="img/Pbird.png">
                 <h2 class="leftbirdtext">摄影老鸟</h2>
             </div>
             <hr/>
             <div class="row aboutleftup">
-                <img class="img-responsive leftimg"src="../s/site/img/ITbird.png">
+                <img class="img-responsive leftimg"src="img/ITbird.png">
                 <h2 class="leftbirdtext">IT老鸟</h2>
             </div>
             <hr/>
         </div>
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
             <div class="row">
-                <img class="aboutrightimg img-responsive"src="../s/site/img/aboutimg.jpg">
-                <!-- <img class="aboutrightimg img-responsive"src="../s/site/img/aboutright.jpg"> -->
+                <img class="aboutrightimg img-responsive"src="img/aboutimg.jpg">
+                <!-- <img class="aboutrightimg img-responsive"src="img/aboutright.jpg"> -->
             </div>
             <div class="row">
                 <h1 class="aboutrighttitle">我们是</h1>
