--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CaiBird</title>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery-1.9.1.js"> </script>
-     <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery-ui.min.js"></script>
-    <link href="../s/site/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../s/site/css/jquery-ui.min.css">
-    <link rel="stylesheet" type="text/css" href="../s/site/css/indexcss.css">
-    <script src="../s/site/js/bootstrap.min.js"></script>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/indexjs.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js"> </script>
+     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="css/indexcss.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
 </head>
 <body>
 <!--Start of  Header Area -->
 <div class="header">
   <div class="row titlehead">
-    <img src="../s/site/img/logo.png" class="imglogo">
+    <img src="img/logo.png" class="imglogo">
   </div>
 
   <nav class="navbar navhome">
@@ -29,8 +29,10 @@
         <li><a href="design.html">设计</a></li>
         <li><a href="photo.html">摄像</a></li>
         <li><a href="it.html">IT</a></li>
+        <li><a href="caibird.html">菜鸟课堂</a></li>
         <li><a href="#">项目申请</a></li>
-        <li><a href="aboutus.html">关于我们</a></li>
+        <li><a href="oldbird.html">老鸟客厅</a></li>
+        <li><a href="aboutus.html">加入我们</a></li>
     <!-- </div> --><!-- /.navbar-collapse -->
   <!-- </div> --><!-- /.container-fluid -->
   </nav>
@@ -67,16 +69,16 @@
         <!-- End of part2 -->
      </div>
       <div class="item active">
-        <img  class="img-responsive center-block" src="../s/site/img/carousel1.jpg" alt="">
+        <img  class="img-responsive center-block" src="img/carousel1.jpg" alt="">
       </div>
       <div class="item">
-        <img class="img-responsive center-block" src="../s/site/img/carousel1.jpg" alt="">
+        <img class="img-responsive center-block" src="img/carousel1.jpg" alt="">
       </div>
       <div class="item">
-        <img class="img-responsive center-block" src="../s/site/img/carousel1.jpg" alt="">
+        <img class="img-responsive center-block" src="img/carousel1.jpg" alt="">
       </div>
       <div class="item">
-        <img class="img-responsive center-block" src="../s/site/img/carousel1.jpg" alt="">
+        <img class="img-responsive center-block" src="img/carousel1.jpg" alt="">
       </div>
         <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>
@@ -94,9 +96,9 @@
  <div class="container-fluid">
   <div class="funcgroup row">
   <!-- <div class="col-sm-offset-3">  -->
-    <a href="design.html"><img src="../s/site/img/func/design-h.png" class="col-xs-2 col-md-2 col-sm-2 col-lg-2" > </a>
-    <a href="photo.html"><img src="../s/site/img/func/photo-h.png" class="col-xs-2 col-md-2 col-sm-2 col-lg-2"></a>
-    <a href="it.html"><img src="../s/site/img/func/it-h.png" class="col-xs-2 col-md-2 col-sm-2 col-lg-2"></a>
+    <a href="design.html"><img src="img/func/design-h.png" class="col-xs-2 col-md-2 col-sm-2 col-lg-2" > </a>
+    <a href="photo.html"><img src="img/func/photo-h.png" class="col-xs-2 col-md-2 col-sm-2 col-lg-2"></a>
+    <a href="it.html"><img src="img/func/it-h.png" class="col-xs-2 col-md-2 col-sm-2 col-lg-2"></a>
   <!-- </div> -->
   </div>
  </div>
@@ -105,13 +107,13 @@
 
 
 <div class="panel3">
-  <img src="../s/site/img/birdsback.jpg" class="img-responsive birdsback text-center"></img>
-    <img src="../s/site/img/birds/bird1.png" class="caibird1 img-responsive img-circle">
-    <img src="../s/site/img/birds/bird2.png" class="caibird2 img-responsive img-circle">
-    <img src="../s/site/img/birds/bird3.png" class="caibird3 img-responsive img-circle" >
-    <img src="../s/site/img/birds/bird4.png" class="caibird4 img-responsive img-circle">
-    <img src="../s/site/img/birds/bird5.png" class="caibird5 img-responsive img-circle">
-    <img src="../s/site/img/birds/bird1.png" class="oldbird img-responsive img-circle">
+  <img src="img/birdsback.jpg" class="img-responsive birdsback text-center"></img>
+    <img src="img/birds/bird1.png" class="caibird1 img-responsive img-circle">
+    <img src="img/birds/bird2.png" class="caibird2 img-responsive img-circle">
+    <img src="img/birds/bird3.png" class="caibird3 img-responsive img-circle" >
+    <img src="img/birds/bird4.png" class="caibird4 img-responsive img-circle">
+    <img src="img/birds/bird5.png" class="caibird5 img-responsive img-circle">
+    <img src="img/birds/bird1.png" class="oldbird img-responsive img-circle">
     <h1 class='oldbirdtitle'>黑神</h1>
     <h3 class='oldbirddes text-center' >移动UI大牛，移动UI大牛移动UI大牛</h3>
 </div>
@@ -130,7 +132,7 @@
       <!-- </div> -->
      </div>
       <div class="col-xs-1 col-sm-2 col-md-2 col-lg-2">
-        <img src="../s/site/img/qrcode.jpg" class="qrcode img-responsive">
+        <img src="img/qrcode.jpg" class="qrcode img-responsive">
       </div>
     </div>
 
