--- a/photo.html
+++ b/photo.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CaiBird</title>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery-1.9.1.js"> </script>
-     <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery-ui.min.js"></script>
-    <link href="../s/site/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../s/site/css/jquery-ui.min.css">
-    <link rel="stylesheet" type="text/css" href="../s/site/css/indexcss.css">
-    <script src="../s/site/js/bootstrap.min.js"></script>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/indexjs.js"></script>
-    <script type="text/javascript" language="JavaScript" src="../s/site/js/jquery.bootpag.min.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js"> </script>
+     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="css/indexcss.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
+    <script type="text/javascript" language="JavaScript" src="js/jquery.bootpag.min.js"></script>
     <style type="text/css">
       .protitle{
         margin-top: 0;
@@ -32,7 +32,7 @@
 
 <div class="header">
   <div class="row titlehead">
-    <img src="../s/site/img/logo.png" class="imglogo">
+    <img src="img/logo.png" class="imglogo">
   </div>
 
   <nav class="navbar navhome">
@@ -40,12 +40,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <!-- <div class="collapse navbar-collapse"> -->
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">首页</a></li>
+        <li><a href="index.html">首页</a></li>
         <li><a href="design.html">设计</a></li>
-        <li><a href="photography.html">摄像</a></li>
+        <li class="active"><a href="photo.html">摄像</a></li>
         <li><a href="it.html">IT</a></li>
+        <li><a href="caibird.html">菜鸟课堂</a></li>
         <li><a href="#">项目申请</a></li>
-        <li><a href="aboutus.html">关于我们</a></li>
+        <li><a href="oldbird.html">老鸟客厅</a></li>
+        <li><a href="aboutus.html">加入我们</a></li>
     <!-- </div> --><!-- /.navbar-collapse -->
   <!-- </div> --><!-- /.container-fluid -->
   </nav>
@@ -61,17 +63,17 @@
             <div class="row lefttextitem">更早</div><hr/><br>
             <div class="row lefttexttitle"><strong>老鸟客厅</strong></div><hr/>
             <div class="row aboutleftup">
-                <img class="img-responsive leftimg"src="../s/site/img/birds/bird1.png">
+                <img class="img-responsive leftimg"src="img/birds/bird1.png">
                 <h2 class="leftbirdtext">IT老鸟</h2>
             </div>
             <hr/>
             <div class="row aboutleftup">
-                <img class="img-responsive leftimg"src="../s/site/img/birds/bird2.png">
+                <img class="img-responsive leftimg"src="img/birds/bird2.png">
                 <h2 class="leftbirdtext">摄影老鸟</h2>
             </div>
             <hr/>
             <div class="row aboutleftup">
-                <img class="img-responsive leftimg"src="../s/site/img/birds/bird3.png">
+                <img class="img-responsive leftimg"src="img/birds/bird3.png">
                 <h2 class="leftbirdtext">摄影老鸟</h2>
             </div>
 
@@ -79,7 +81,7 @@
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <img class="img-responsive" src="../s/site/img/project1.jpg">
+                    <img class="img-responsive" src="img/project1.jpg">
                 </div>
                 <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                     <div class="row"> <h1 class="protitle">拍摄任务一</h1></div>
@@ -94,7 +96,7 @@
             <hr class="hrright"/>
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <img class="img-responsive" src="../s/site/img/project2.jpg">
+                    <img class="img-responsive" src="img/project2.jpg">
                 </div>
                 <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                     <div class="row"> <h1 class="protitle">拍摄任务二</h1></div>
@@ -110,7 +112,7 @@
             <hr class="hrright"/>
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <img class="img-responsive" src="../s/site/img/project3.jpg">
+                    <img class="img-responsive" src="img/project3.jpg">
                 </div>
                 <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                     <div class="row"> <h1 class="protitle">拍摄任务三</h1></div>
@@ -126,7 +128,7 @@
             <hr class="hrright"/>
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <img class="img-responsive" src="../s/site/img/project4.jpg">
+                    <img class="img-responsive" src="img/project4.jpg">
                 </div>
                 <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                     <div class="row"> <h1 class="protitle">拍摄任务四</h1></div>
