--- a/design.html
+++ b/design.html
@@ -8,14 +8,10 @@
     <title>CaiBird</title>
     <script type="text/javascript" language="JavaScript" src="js/jquery-1.9.1.js">
     </script>
-    <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/indexcss.css">
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
-    <script type="text/javascript" language="JavaScript" src="js/jquery.bootpag.min.js"></script>
-    
     <script src="js/angular.min.js"></script>
     <style type="text/css">
     .active {
@@ -104,20 +100,9 @@
     }
     </style>
     <script type="text/javascript">
-    var app = angular.module('itemApp');
+    var app = angular.module('itemApp', []);
 
-    app.filter('startFrom', function() {
-        return function(input, start) {
-            if (input) {
-                start = +start;
-                return input.slice(start);
-            }
-            return [];
-        };
-    });
-
-    app.controller('itemCtrl', ['$scope', 'filterFilter', function($scope, filterFilter) {
-
+    app.controller('itemCtrl', function($scope) {
 
         $scope.items = [{
             itemTitle: "幼师口袋",
@@ -161,28 +146,20 @@
             itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
         }];
 
-        // create empty search model (object) to trigger $watch on update
-        $scope.search = {};
-
-        $scope.resetFilters = function() {
-            // needs to be a function or it won't trigger a $watch
-            $scope.search = {};
-        };
-
         // pagination controls
         $scope.currentPage = 1;
         $scope.totalItems = $scope.items.length;
-        $scope.entryLimit = 8; // items per page
+        $scope.entryLimit = 3; // items per page
         $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
 
         // $watch search to update pagination
-        $scope.$watch('search', function(newVal, oldVal) {
-            $scope.filtered = filterFilter($scope.items, newVal);
-            $scope.totalItems = $scope.filtered.length;
-            $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
-            $scope.currentPage = 1;
-        }, true);
-    }]);
+        // $scope.$watch('currentPage', function(newVal, oldVal) {
+        //     $scope.filtered = filterFilter($scope.items, newVal);
+        //     $scope.totalItems = $scope.filtered.length;
+        //     $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
+        //     $scope.currentPage = 1;
+        // }, true);
+    });
     </script>
 </head>
 
@@ -236,7 +213,7 @@
             </div>
             <hr>
             <div ng-app="itemApp" ng-controller="itemCtrl" class="items">
-                <div class="item" ng-repeat="itemline in filtered = items | filter:search | startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
+                <div class="item" ng-repeat="itemline in items">
                     <img class="img-responsive itemimg" src="img/design1.png" alt="">
                     <div class="itemdesc">
                         <p class="itemtitle">{{itemline.itemTitle}}</p>
@@ -246,247 +223,17 @@
                     </div>
                     <hr>
                 </div>
-                <pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination>
+                <ul class="pagination">
+                    <li><a href="#">&laquo;</a></li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">&raquo;</a></li>
+
+                </ul>
+                <!-- <pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination> -->
             </div>
-            <!--         <div class="items">
-                <div class="item">
-                    <img class="img-responsive itemimg" src="img/design1.png" alt="">
-                    <div class="itemdesc">
-                        <p class="itemtitle">幼师口袋</p>
-                        <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                            <span>项目周期:</span><span>2个月</span></p>
-                        <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-                    </div>
-                </div>
-                <hr/>
-                <div class="item">
-                    <img class="img-responsive itemimg" src="img/design1.png" alt="">
-                    <div class="itemdesc">
-                        <p class="itemtitle">阿里云计划</p>
-                        <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                            <span>项目周期:</span><span>2个月</span></p>
-                        <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-                    </div>
-                </div>
-                <hr/>
-                <div class="item">
-                    <img class="img-responsive itemimg" src="img/design1.png" alt="">
-                    <div class="itemdesc">
-                        <p class="itemtitle">去哪儿携程</p>
-                        <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                            <span>项目周期:</span><span>2个月</span></p>
-                        <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-                    </div>
-                </div>
-                <hr/>
-                <div class="item">
-                    <img class="img-responsive itemimg" src="img/design1.png" alt="">
-                    <div class="itemdesc">
-                        <p class="itemtitle">福特终端系统</p>
-                        <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                            <span>项目周期:</span><span>2个月</span></p>
-                        <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-                    </div>
-                </div>
-                <hr/>
-                <div class="item">
-                    <img class="img-responsive itemimg" src="img/design1.png" alt="">
-                    <div class="itemdesc">
-                        <p class="itemtitle">辣妹狂拍</p>
-                        <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                            <span>项目周期:</span><span>2个月</span></p>
-                        <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-                    </div>
-                </div>
-                <hr/>
-            </div> -->
         </div>
-        <!--         <div class="contentarea"></div>
     </div>
-    <div class="contentmenu col-sm-7 col-md-7">
-        <span class="col-sm-2 col-md-1">
-            <h2>有趣项目</h2>
-        </span>
-        <span class="col-sm-2 col-md-1">
-            <h2>商业项目</h2>
-        </span>
-        <span class="col-sm-2 col-md-1">
-            <h2>公益项目</h2>
-        </span>
-        <span class="col-sm-2 col-md-1">
-            <h2>创业项目</h2>
-        </span>
-    </div>
-    <div class="col-sm-7 col-md-7">
-        <div class="item row">
-            <br/>
-            <br/>
-            <div class="col-sm-1 col-md-1"><img class="img-responsive" src="img/design1.png" alt=""></div>
-            <div class="col-sm-8 col-md-8">
-                <h1>幼师口袋</h1>
-                <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                    <span>项目周期:</span><span>2个月</span></p>
-                <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-            </div>
-        </div>
-        <hr/>
-        <div class="item row">
-            <br/>
-            <div class="col-sm-2 col-md-2"><img class="img-responsive" src="img/design1.png" alt=""></div>
-            <div class="col-sm-8 col-md-8">
-                <h1>阿里云计划</h1>
-                <p class="itemtext"><span>项目需求人数:</span><span>5人 &nbsp | &nbsp</span>
-                    <span>项目周期:</span><span>2个月</span></p>
-                <p class="itemtext"><span>幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。</span></p>
-            </div>
-        </div>
-        <hr/>
-        <div class="item">
-            <h1>hello Test</h1>
-        </div>
-        <div class="item">
-            <h1>hello Test</h1>
-        </div>
-        <div class="item">
-            <h1>hello Test</h1>
-        </div>
-        <div class="item">
-            <h1>hello Test</h1>
-        </div>
-    </div> -->
-        <!--     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-3 col-xs-offset-1 col-sm-3 col-sm-offset-2 col-md-2 col-md-offset-2 col-lg-2 col-lg-offset-2">
-                <div class="row lefttexttitle"><strong>全部</strong></div>
-                <div class="row lefttextitem">今天发布</div>
-                <hr/>
-                <div class="row lefttextitem">一周发布</div>
-                <hr/>
-                <div class="row lefttextitem">本月发布</div>
-                <hr/>
-                <div class="row lefttextitem">更早</div>
-                <hr/>
-                <br>
-                <div class="row lefttexttitle"><strong>老鸟客厅</strong></div>
-                <hr/>
-                <div class="row aboutleftup">
-                    <img class="img-responsive leftimg" src="img/birds/bird1.png">
-                    <h2 class="leftbirdtext">IT老鸟</h2>
-                </div>
-                <hr/>
-                <div class="row aboutleftup">
-                    <img class="img-responsive leftimg" src="img/birds/bird2.png">
-                    <h2 class="leftbirdtext">摄影老鸟</h2>
-                </div>
-                <hr/>
-                <div class="row aboutleftup">
-                    <img class="img-responsive leftimg" src="img/birds/bird3.png">
-                    <h2 class="leftbirdtext">摄影老鸟</h2>
-                </div>
-            </div>
-            <div class="col-xs-5 col-sm-6 col-md-5 col-lg-5">
-                <div class="row">
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                        <img class="img-responsive" src="img/project1.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                        <div class="row"><a href="designproject.html"><h1 class="protitle">电子商务网站</h1></a></div>
-                        <div class="row">
-                            <h2 class="prosize">项目需求人数：5人 项目周期： 2个月</h2>
-                        </div>
-                        <div class="row">
-                            <h3 class="prodes">项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊</h3>
-                        </div>
-                    </div>
-                </div>
-                <hr class="hrright" />
-                <div class="row">
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                        <img class="img-responsive" src="img/project2.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                        <div class="row">
-                            <a href="designproject.html">
-                                <h1 class="protitle">电子商务网站</h1></a>
-                        </div>
-                        <div class="row">
-                            <h2 class="prosize">项目需求人数：5人 项目周期： 2个月</h2>
-                        </div>
-                        <div class="row">
-                            <h3 class="prodes">项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊</h3>
-                        </div>
-                    </div>
-                </div>
-                <hr class="hrright" />
-                <div class="row">
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                        <img class="img-responsive" src="img/project3.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                        <div class="row">
-                            <a href="designproject.html">
-                                <h1 class="protitle">电子商务网站</h1></a>
-                        </div>
-                        <div class="row">
-                            <h2 class="prosize">项目需求人数：5人 项目周期： 2个月</h2>
-                        </div>
-                        <div class="row">
-                            <h3 class="prodes">项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊</h3>
-                        </div>
-                    </div>
-                </div>
-                <hr class="hrright" />
-                <div class="row">
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                        <img src="img/project4.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                        <div class="row">
-                            <a href="designproject.html">
-                                <h1 class="protitle">电子商务网站</h1></a>
-                        </div>
-                        <div class="row">
-                            <h2 class="prosize">项目需求人数：5人 项目周期： 2个月</h2>
-                        </div>
-                        <div class="row">
-                            <h3 class="prodes">项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊项目描述怎么写啊</h3>
-                        </div>
-                    </div>
-                </div>
-                <hr class="hrright" />
-                <div id="page-selection"></div>
-            </div>
-        </div>
-    </div> -->
-        <script type="text/javascript">
-        $(document).ready(function() {
-
-            // var totalW = $('.rightpart').width();
-            // if (totalW < 800) {
-
-            //     var ratio = totalW/800;
-            //     var imgH = $(".aboutrightimg").height();
-            //     $(".aboutrightimg").height(imgH*ratio);
-            // };
-        })
-
-        $('#page-selection').bootpag({
-            total: 10,
-            maxVisible: 4,
-        }).on("page", function(event, num) {
-            alert("current page is" + num); // some ajax content loading...
-            var request = $.ajax({
-                url: 'http://121.40.113.6:8088/alltest/wsit',
-                method: 'GET',
-                data: {
-                    currentPage: num
-                },
-                datatype: 'json'
-            });
-            request.done(function(data) {});
-
-        });
-        </script>
 </body>
 
 </html>
