--- a/design.html
+++ b/design.html
@@ -13,6 +13,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/indexjs.js"></script>
     <script src="js/angular.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
     <style type="text/css">
     .active {
         color: red;
@@ -99,11 +100,21 @@
         margin-right: 2%;
     }
     </style>
-    <script type="text/javascript">
-    var app = angular.module('itemApp', []);
+    <script>
+    var app = angular.module('myApp', ['ui.bootstrap']);
 
-    app.controller('itemCtrl', function($scope) {
 
+    app.filter('startFrom', function() {
+        return function(input, start) {
+            if (input) {
+                start = +start;
+                return input.slice(start);
+            }
+            return [];
+        };
+    });
+
+    app.controller('PageCtrl', ['$scope', 'filterFilter', function($scope, filterFilter) {
         $scope.items = [{
             itemTitle: "幼师口袋",
             headCount: "5人",
@@ -146,20 +157,28 @@
             itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
         }];
 
+        // create empty search model (object) to trigger $watch on update
+        $scope.search = {};
+
+        $scope.resetFilters = function() {
+            // needs to be a function or it won't trigger a $watch
+            $scope.search = {};
+        };
+
         // pagination controls
         $scope.currentPage = 1;
         $scope.totalItems = $scope.items.length;
-        $scope.entryLimit = 3; // items per page
+        $scope.entryLimit = 5; // items per page
         $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
 
         // $watch search to update pagination
-        // $scope.$watch('currentPage', function(newVal, oldVal) {
-        //     $scope.filtered = filterFilter($scope.items, newVal);
-        //     $scope.totalItems = $scope.filtered.length;
-        //     $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
-        //     $scope.currentPage = 1;
-        // }, true);
-    });
+        $scope.$watch('search', function(newVal, oldVal) {
+            $scope.filtered = filterFilter($scope.items, newVal);
+            $scope.totalItems = $scope.filtered.length;
+            $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
+            $scope.currentPage = 1;
+        }, true);
+    }]);
     </script>
 </head>
 
@@ -212,8 +231,8 @@
                 </div>
             </div>
             <hr>
-            <div ng-app="itemApp" ng-controller="itemCtrl" class="items">
-                <div class="item" ng-repeat="itemline in items">
+            <div ng-app="myApp" ng-controller="PageCtrl" class="items">
+                <div class="item" ng-repeat="itemline in filtered = items | filter:search | startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
                     <img class="img-responsive itemimg" src="img/design1.png" alt="">
                     <div class="itemdesc">
                         <p class="itemtitle">{{itemline.itemTitle}}</p>
@@ -223,14 +242,7 @@
                     </div>
                     <hr>
                 </div>
-                <ul class="pagination">
-                    <li><a href="#">&laquo;</a></li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">&raquo;</a></li>
-
-                </ul>
-                <!-- <pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination> -->
+                <pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination>
             </div>
         </div>
     </div>
