Change format of sidebar

--- a/design.html
+++ b/design.html
@@ -184,8 +184,8 @@
         }, true);
     }]);
 
-    app.controller('SidebarCtrl', function($scope,$http){
-        $http.get('http://121.40.113.6/api/GetTagSet?projectType=DESIGN').success(function(data){
+    app.controller('SidebarCtrl', function($scope, $http) {
+        $http.get('http://121.40.113.6/api/GetTagSet?projectType=DESIGN').success(function(data) {
             $scope.items = data;
         });
     });
@@ -215,21 +215,11 @@
                 <li>
                     <h2><a href="design.html" class="active">全部</a></h2></li>
                 <hr/>
-                <li ng-repeat="tag in items">
-                    <h2><a href="design1.html">{{tag.tag}}</a></h2></li>
-  <!-- <hr/>
-<li>    
-    <h2><a href="design2.html">平面设计</a></h2></li>
-<hr/>
-<li>
-    <h2><a href="design3.html">移动端设计</a></h2></li>
-<hr/>
-<li>
-    <h2><a href="design4.html">交互设计</a></h2></li>
-<hr/>
-<li>
-    <h2><a href="design5.html">编辑设计</a></h2></li>
- -->
+                <div ng-repeat="tag in items">
+                    <li>
+                        <h2><a href="design1.html">{{tag.tag}}</a></h2></li>
+                    <hr/>
+                </div>
             </ul>
         </div>
         <div class="contentarea">
@@ -242,7 +232,7 @@
                 </div>
             </div>
             <hr>
-            <div  ng-controller="PageCtrl" class="items">
+            <div ng-controller="PageCtrl" class="items">
                 <div class="item" ng-repeat="itemline in filtered = items | filter:search | startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
                     <img class="img-responsive itemimg" src="img/design1.png" alt="">
                     <div class="itemdesc">
