--- a/design.html
+++ b/design.html
@@ -119,47 +119,51 @@
     });
 
     app.controller('PageCtrl', ['$scope', 'filterFilter', function($scope, filterFilter) {
-        $scope.items = [{
-            itemTitle: "幼师口袋",
-            headCount: "5人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "阿里云计划",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "去哪儿携程",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "福特终端系统",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "辣妹狂拍",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "福特终端系统",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "福特终端系统",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }, {
-            itemTitle: "福特终端系统",
-            headCount: "4人",
-            timeLength: "2个月",
-            itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
-        }];
+        $http.get('http://121.40.113.6/api/GetProjectSet?projectType=DESIGN').success(function(data) {
+            $scope.items = data;
+        });
+
+        // $scope.items = [{
+        //     itemTitle: "幼师口袋",
+        //     headCount: "5人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "阿里云计划",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "去哪儿携程",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "福特终端系统",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "辣妹狂拍",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "福特终端系统",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "福特终端系统",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }, {
+        //     itemTitle: "福特终端系统",
+        //     headCount: "4人",
+        //     timeLength: "2个月",
+        //     itemLongtext: "幼师口袋是一个专注面向幼儿园老师群体的媒体和社区，通过微信公众号提供幼儿园区角布置、教具玩具制作等实用信息。"
+        // }];
 
         // create empty search model (object) to trigger $watch on update
         $scope.search = {};
