--- a/design.html
+++ b/design.html
@@ -187,7 +187,7 @@
                 <hr/>
                 <div ng-repeat="tag in items">
                     <li>
-                        <h2><a href="design1.html" ng-click="dipbyTagV()">{{tag.tag}}</a></h2></li>
+                        <h2><a ng-click="dipbyTagV()">{{tag.tag}}</a></h2></li>
                     <hr/>
                 </div>
             </ul>
