sidebar change II

--- a/design.html
+++ b/design.html
@@ -187,8 +187,8 @@
                 <hr/>
                 <div ng-repeat="tag in items">
                     <li>
-                        <h2 ng-click="dipbyTagV()">{{tag.tag}}</h2></li>
-                        <!-- <h2><a >{{tag.tag}}</a></h2></li> -->
+                        <!-- <h2 ng-click="dipbyTagV()">{{tag.tag}}</h2></li> -->
+                        <h2><a >{{tag.tag}}</a></h2></li>
                     <hr/>
                 </div>
             </ul>
