--- a/design.html
+++ b/design.html
@@ -188,7 +188,9 @@
                 <div ng-repeat="tag in items">
                     <li>
                         <!-- <h2 ng-click="dipbyTagV()">{{tag.tag}}</h2></li> -->
-                        <h2><a >{{tag.tag}}</a></h2></li>
+                        <h2><a ng-click="dipbyTagV()">{{tag.tag}}</a></h2></li>
+
+
                     <hr/>
                 </div>
             </ul>
