--- a/design1.html
+++ b/design1.html
@@ -168,6 +168,10 @@
             $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
             $scope.currentPage = 1;
         }, true);
+
+        $scope.test = function() {
+            alert("Hello Alice");
+        }
     }]);
     </script>
 </head>
@@ -199,7 +203,9 @@
                     <h2><a href="design1.html" class="active">Web前端设计</a></h2></li>
                 <hr/>
                 <li>
-                    <h2><a href="design2.html">平面设计</a></h2></li>
+                <button ng-click="test()">Test</button>
+                    <!-- <h2><a href="design2.html" ng-click="test()">平面设计</a></h2> -->
+                    </li>
                 <hr/>
                 <li>
                     <h2><a href="design3.html">移动端设计</a></h2></li>
@@ -232,6 +238,12 @@
                     </div>
                     <hr>
                 </div>
+                <ul>
+                    <li>
+                        <h2 ><a href="" ng-click="test()">Test</a></h2>
+                    </li>
+                </ul>
+                <!-- <button ng-click="test()">Test</button> -->
                 <pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination>
             </div>
         </div>
