--- a/design.html
+++ b/design.html
@@ -147,7 +147,7 @@
 
         });
 
-        $scope.dipbyTagV=function($scope,$http){
+        $scope.dipbyTagV = function() {
             alert("Hello Alice");
               $http.get('http://121.40.113.6/api/GetProjectSet?projectType=DESIGN&tagv=交互设计').success(function(data) {
                 $scope.items = data;
