--- a/design1.html
+++ b/design1.html
@@ -162,7 +162,7 @@
         $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
 
         // $watch search to update pagination
-        $scope.$watch('search', function(newVal, oldVal) {
+        $scope.$watch('totalItems', function(newVal, oldVal) {
             $scope.filtered = filterFilter($scope.items, newVal);
             $scope.totalItems = $scope.filtered.length;
             $scope.noOfPages = Math.ceil($scope.totalItems / $scope.entryLimit);
