change pagination style II

--- a/design.html
+++ b/design.html
@@ -99,6 +99,10 @@
         margin-left: 2%;
         margin-right: 2%;
     }
+    .pagination{
+        padding-right: 5%;
+        float: right;
+    }
     .pagination>li>a,
     .pagination>li>span {
         border: 0px;
