change pagination style III

--- a/design5.html
+++ b/design5.html
@@ -103,7 +103,7 @@
     .pagination>li>a,
     .pagination>li>span {
         border: 0px;
-        color: LightGray;
+        color: Gray;
         font-size: 1em;
     }
     .pagination>.active>a:hover,
@@ -114,7 +114,7 @@
     .pagination>.active>a,
     .pagination>.active>span
      {
-        background-color: LightGray;
+        background-color: DarkGrey;
         font-size: 1em;
     }
     </style>
