--- a/design.html
+++ b/design.html
@@ -106,7 +106,7 @@
     .pagination>li>a,
     .pagination>li>span {
         border: 0px;
-        color: LightGray;
+        color: Gray;
         font-size: 1em;
     }
     .pagination>.active>a:hover,
@@ -117,7 +117,7 @@
     .pagination>.active>a,
     .pagination>.active>span
      {
-        background-color: LightGray;
+        background-color: DarkGrey;
         font-size: 1em;
     }
     </style>
