add ugly footer

--- a/joinus.html
+++ b/joinus.html
@@ -117,7 +117,7 @@
                     <!-- /.container-fluid -->
             </nav>
         </div>
-        <div class="page">
+        <div class="row page">
             <div class="sidebar">
                 <ul class="nav nav-sidebar">
                     <li>
@@ -125,11 +125,10 @@
                     <hr/>
                     <li>
                         <h2><a href="joinus.html" class="active">加入我们</a></h2></li>
-
                 </ul>
             </div>
             <div class="contentarea">
-            <br/>
+                <br/>
                 <div class="row">
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     姓名：</span>
@@ -159,10 +158,26 @@
                     <span class="col-sm-1 col-md-1 col-lg-1">
                     个人简历：</span>
                     <!-- <input type="textarea" rows="4"> -->
-                    <textarea cols="90" rows="4" class="col-sm-5 col-md-5 col-lg-5" placeholder="请填写个人工作经验及简历" ></textarea>
+                    <textarea cols="90" rows="4" class="col-sm-5 col-md-5 col-lg-5" placeholder="请填写个人工作经验及简历"></textarea>
                 </div>
-
                 <button class='btn-danger joinbtn col-sm-offset-1 col-md-offset-1 col-lg-offset-1'>加入</button>
+            </div>
+        </div>
+        <div class="row footer">
+            <div class="footarea1"></div>
+            <div class="footarea2 container-fluid">
+                <div class="row" style="padding-top: 1.5%">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
+                        <h2>联系我们</h2>
+                        <!-- <div class="row"> -->
+                        <!-- <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 "></div> -->
+                        <h2>Email:hxy@hxy.com | Phone:+86 123456789 | Wechat: hayteam</h2>
+                        <!-- </div> -->
+                    </div>
+                    <div class="col-xs-1 col-sm-2 col-md-2 col-lg-2">
+                        <img src="img/qrcode.jpg" class="qrcode img-responsive">
+                    </div>
+                </div>
             </div>
         </div>
         <script type="text/javascript">
