--- a/aboutus.html
+++ b/aboutus.html
@@ -64,7 +64,7 @@
         border: 1px solid #DBDBDB;
     }
     
-    .row {
+    .textrow {
         width: 90%;
         margin-left: 4%;
     }
@@ -73,7 +73,8 @@
         width: 100%;
         margin-left: 0px;
     }
-    .aboutrighttitle{
+    
+    .aboutrighttitle {
         padding-bottom: 1em;
     }
     </style>
@@ -105,7 +106,7 @@
                     <!-- /.container-fluid -->
             </nav>
         </div>
-        <div class="page">
+        <div class="row page">
             <div class="sidebar">
                 <ul class="nav nav-sidebar">
                     <li>
@@ -118,19 +119,19 @@
             <div class="contentarea">
                 <img class="img-responsive aboutrightimg" src="img/aboutimg.jpg">
                 <!-- <img class="aboutrightimg img-responsive"src="img/aboutright.jpg"> -->
-                <div class="row">
+                <div class="row textrow">
                     <h1 class="aboutrighttitle">我们是</h1>
                 </div>
-                <div class="row">
+                <div class="row textrow">
                     <p class="itemtext">请把自己希望团队的样子描述在这里，请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里</p>
                     <br\>
                         <p class="itemtext">请把自己希望团队的样子描述在这里，请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里请把自己希望团队的样子描述在这里</p>
                 </div>
                 <hr class="hrright" />
-                <div class="row">
+                <div class="row textrow">
                     <h1 class="aboutrighttitle">联系我们</h1>
                 </div>
-                <div class="row">
+                <div class="row textrow">
                     <p class="itemtext">公司地址：银河系金牛座</p>
                     <p class="itemtext"> 邮编：-999999</p>
                     <p class="itemtext">公司电话：+86 123456789</p>
@@ -140,7 +141,25 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">s
+        <div class="row footer">
+            <div class="footarea1"></div>
+            <div class="footarea2 container-fluid">
+                <div class="row" style="padding-top: 1.5%">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
+                        <h2>联系我们</h2>
+                        <!-- <div class="row"> -->
+                        <!-- <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 "></div> -->
+                        <h2>Email:hxy@hxy.com | Phone:+86 123456789 | Wechat: hayteam</h2>
+                        <!-- </div> -->
+                    </div>
+                    <div class="col-xs-1 col-sm-2 col-md-2 col-lg-2">
+                        <img src="img/qrcode.jpg" class="qrcode img-responsive">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+        s
         $(document).ready(function() {
             // var totalW = $('.rightpart').width();
             // if (totalW < 800) {
