--- a/photo.html
+++ b/photo.html
@@ -199,7 +199,7 @@
                 <li><a href="aboutus.html">加入我们</a></li>
         </nav>
     </div>
-    <div class="page">
+    <div class="row page">
         <div class="sidebar">
             <ul class="nav nav-sidebar">
                 <li>
@@ -216,7 +216,6 @@
                 <hr/>
                 <li>
                     <h2><a href="#">旅游写真</a></h2></li>
-               
             </ul>
         </div>
         <div class="contentarea">
@@ -241,6 +240,23 @@
                     <hr>
                 </div>
                 <pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination>
+            </div>
+        </div>
+    </div>
+    <div class="row footer">
+        <div class="footarea1"></div>
+        <div class="footarea2 container-fluid">
+            <div class="row footercontent">
+                <div class="foottext">
+                    <span>联系我们</span>
+                    <br>
+                    <span>Email:hxy@hxy.com | Phone:+86 123456789 | Wechat: hayteam</span>
+                    <hr class="foothr">
+                    <span>Copyright 1998-2015 Cainiao, All Rights Reserved.菜鸟公司版权所有</span>
+                </div>
+                <div class="footimg">
+                    <img src="img/qrcode.jpg" class="qrcode img-responsive">
+                </div>
             </div>
         </div>
     </div>
