--- a/aboutus.html
+++ b/aboutus.html
@@ -77,6 +77,7 @@
     .aboutrighttitle {
         padding-bottom: 1em;
     }
+    
     </style>
 </head>
 
@@ -144,15 +145,15 @@
         <div class="row footer">
             <div class="footarea1"></div>
             <div class="footarea2 container-fluid">
-                <div class="row" style="padding-top: 1.5%">
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
-                        <h2>联系我们</h2>
-                        <!-- <div class="row"> -->
-                        <!-- <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 "></div> -->
-                        <h2>Email:hxy@hxy.com | Phone:+86 123456789 | Wechat: hayteam</h2>
-                        <!-- </div> -->
+                <div class="row footercontent">
+                    <div class="foottext">
+                        <span>联系我们</span>
+                        <br>
+                        <span>Email:hxy@hxy.com | Phone:+86 123456789 | Wechat: hayteam</span>
+                        <hr class="foothr">
+                        <span>Copyright 1998-2015 Cainiao, All Rights Reserved.菜鸟公司版权所有</span>
                     </div>
-                    <div class="col-xs-1 col-sm-2 col-md-2 col-lg-2">
+                    <div class="footimg">
                         <img src="img/qrcode.jpg" class="qrcode img-responsive">
                     </div>
                 </div>
