change caibird css style

--- a/caibird.html
+++ b/caibird.html
@@ -41,14 +41,14 @@
     .item {
         margin-left: 2%;
         margin-right: 2%;
-        height:162px;
+        height:160px;
         background: white;
         margin-bottom: 2%;
+        border: 1px solid #C4C4C4;
     }
     .imgblock{
         height: 160px;
         float: left;
-        margin-top: 1px;
     }
     .coursehr{
         margin:0;
