apply page& css changes for courses page

--- a/caibird.html
+++ b/caibird.html
@@ -26,11 +26,13 @@
         height: 160px;
         /*height: px;*/
         float: left;
+        margin-right: 8px
     }
     
     .itemdesc {
-        width: 74%;
-        float: right;
+        width: 100%;
+        /*float: right;*/
+        margin-left: 1%;
         padding-top: 1%;
     }
     
@@ -161,7 +163,7 @@
                 <li><a href="photo.html">摄像</a></li>
                 <li><a href="it.html">IT</a></li>
                 <li class="active"><a href="caibird.html">菜鸟课堂</a></li>
-                <li><a href="#">项目申请</a></li>
+                <li><a href="apply.html">项目申请</a></li>
                 <li><a href="oldbird.html">老鸟客厅</a></li>
                 <li><a href="aboutus.html">加入我们</a></li>
                 <!-- </div> -->
